@@ -1,12 +1,16 @@
-// Copyright (c) 2005 Luke J. Kolin. All Rights Reserved.
+// Copyright 2005, 2006 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.system;
 
 import java.sql.Connection;
+
+import org.deltava.beans.system.Issue;
 
 import org.deltava.commands.*;
 import org.deltava.dao.*;
 
 import org.deltava.security.command.IssueAccessControl;
+
+import org.deltava.util.*;
 
 /**
  * A Web Site Command to search Issues and comments.
@@ -24,12 +28,15 @@ public class IssueSearchCommand extends AbstractCommand {
      */
 	public void execute(CommandContext ctx) throws CommandException {
 		
-		// Get max results
-		int maxResults = 20;
-		try {
-			maxResults = Integer.parseInt(ctx.getParameter("maxResults"));
-			ctx.setAttribute("maxResults", new Integer(maxResults), REQUEST);
-		} catch (Exception e) { }
+		// Get search options
+		int maxResults = StringUtils.parse(ctx.getParameter("maxResults"), 20);
+		boolean searchComments = Boolean.valueOf(ctx.getParameter("doComments")).booleanValue();
+		int status = StringUtils.arrayIndexOf(Issue.STATUS, ctx.getParameter("status"));
+		int area = StringUtils.arrayIndexOf(Issue.AREA, ctx.getParameter("area"));
+		
+		// Save combo options
+		ctx.setAttribute("statusOpts", ComboUtils.fromArray(Issue.STATUS), REQUEST);
+		ctx.setAttribute("areaOpts", ComboUtils.fromArray(Issue.AREA), REQUEST);
 
 		// Get command result
 		CommandResult result = ctx.getResult();
@@ -39,22 +46,22 @@ public class IssueSearchCommand extends AbstractCommand {
 			return;
 		}
 		
-		boolean searchComments = Boolean.valueOf(ctx.getParameter("doComments")).booleanValue();
 		try {
 			Connection con = ctx.getConnection();
 			
 			// Get the DAO and search
 			GetIssue dao = new GetIssue(con);
 			dao.setQueryMax(maxResults);
-			ctx.setAttribute("results", dao.search(ctx.getParameter("searchStr"), searchComments), REQUEST);
+			ctx.setAttribute("results", dao.search(ctx.getParameter("searchStr"), status, area, searchComments), REQUEST);
 		} catch (DAOException de) {
 			throw new CommandException(de);
 		} finally {
 			ctx.release();
 		}
 		
-		// Set search attribute
+		// Set search attributes
 		ctx.setAttribute("doSearch", Boolean.TRUE, REQUEST);
+		ctx.setAttribute("maxResults", new Integer(maxResults), REQUEST);
 		
         // Calculate our access control for creating issues
         IssueAccessControl access = new IssueAccessControl(ctx, null);
